<resources>
    <string name="app_name">Bakso_Viral_Jember_Mobile</string>
    <string name="editprofile">Edit Profile</string>
    <string name="buat_biodata_baru">Buat Biodata Baru</string>
    <string name="simpan">Simpan</string>
    <string name="cancel">Cancel</string>
    <string name="namadepan">Nama Depan</string>
    <string name="namabelakang">Nama Belakang</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="email">Email</string>
    <string name="telepon">No. Telepon</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="alamatpengiriman">Alamat Pengiriman</string>
</resources>